--- a/.github/workflows/2022_rust_03_tests.yml
+++ b/.github/workflows/2022_rust_03_tests.yml
@@ -3,10 +3,10 @@ name: Rust Unit Tests for 2022-03
 on:
   push:
     paths:
-      - '2022/rust_03/**'
+      - '2022/rust/03/**'
   pull_request:
     paths:
-      - '2022/rust_03/**'
+      - '2022/rust/03/**'
 
 jobs:
   build:
@@ -23,8 +23,8 @@ jobs:
 
     - name: Build
       run: cargo build --verbose
-      working-directory: '2022/rust_03'
+      working-directory: '2022/rust/03'
 
     - name: Run Unit Tests
       run: cargo test --verbose
-      working-directory: '2022/rust_03'
+      working-directory: '2022/rust/03'
